<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/home"
            android:textSize="30sp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textColor="@color/black" />


       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal">

           <ImageView
               android:id="@+id/search_button_iw"
               android:layout_width="35dp"
               android:layout_height="40dp"
               android:layout_gravity="center_vertical"
               android:layout_marginStart="5dp"
               app:srcCompat="@drawable/search_icon"
               android:contentDescription="@string/search_desc"
               />

           <ImageView
               android:id="@+id/settings_button_iw"
               android:layout_width="35dp"
               android:layout_height="40dp"
               android:layout_gravity="center_vertical"
               android:layout_marginStart="5dp"
               app:srcCompat="@drawable/settings_icon"
               android:contentDescription="@string/settings_desc"
               />
       </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>