<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Titre -->
        <TextView
            android:id="@+id/activity_search_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/search_movie"
            android:textStyle="bold" />

        <!-- Champ de recherche -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:gravity="center">

            <EditText
                android:id="@+id/search_movie_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="75"
                android:inputType="text"
                android:textSize="15sp"
                android:padding="8dp"
                android:background="@drawable/edittext_rounded_search"
                android:hint="@string/search"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:autofillHints="" />

            <TextView
                android:id="@+id/search_movie_input_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/cancel"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:visibility="gone"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>